--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 .App {
   font-family: "Oswald", sans-serif;
   text-align: center;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   background-color: #eaeaea;
   height: 100vh;
   width: 100vw;
@@ -11,24 +12,18 @@
 
 .logo {
   height: 2em;
-  margin-top: 3vh;
+  margin-left: 2vw;
 }
 
 /* NavBar */
 
 .navBar {
-  height: 5vh;
-
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 80%;
-
+  height: 12vh;
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 2vw 5vw;
 
   font-size: medium;
 }
@@ -38,6 +33,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin-right: 2vw;
 }
 
 .navLink {
@@ -53,7 +49,6 @@
 .navLink:hover, .currentPage{
   background-size: 70% .05em;
 }
-
 
 /*projects*/
 .card-container{
@@ -132,17 +127,82 @@
 
 /* About page */
 
-.about {
-  position: absolute;
-  top: 0;
+.page-container {
+  width: 100%;
+  height: 100%;
+  color: #333;
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-header {
+  text-align: center;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  font-size: 4em;
+  color: #333;
+}
+
+.about-content {
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  height: 100vh;
+  justify-content: center;
+  text-align: left;
 }
 
-.avatar {
-  height: 50vh;
-  margin-left: 20vw;
+.about-image {
+  width: 100%;
+  opacity: 0.8;
+}
+
+.haeder-image {
+  position: absolute;
+  top: 0;
+  left: -15%;
+  height: 20%;
+  object-fit: cover;
+  z-index: 1;
+}
+
+.about-image-and-icons {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: right;
+  justify-content: center;
+  margin-right: 5vw;
+  width: 20%;
+}
+
+.about-text {
+  width: 50%;
+}
+
+.about-content p {
+  line-height: 1.6;
+  font-size: 1.3vw;
+}
+
+.social-links {
+  width: 100%;
+  text-align: right;
+}
+
+.social-links a {
+  margin: 0 10px;
+  text-decoration: none;
+  font-size: 1.5em;
+  color: #333;
+}
+
+.social-links a:hover {
+  color: #000;
 }
