--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,8 @@
 /* NavBar */
 
 .navBar {
-  height: 12vh;
+  height: 5vh;
+  margin-top: 3vh;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -136,7 +137,7 @@
 
 .grid {
   width: 80vw;
-  height: 70vh;
+  height: 80vh;
   display: grid;
   grid-template-columns: auto auto auto auto;
   grid-auto-rows: 18vw;
@@ -169,4 +170,23 @@
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
 
   border-radius: 0.5vw;
+
+  border: 1px solid #333;
+
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.projectImage {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 0.5vw;
+
+  transition: transform .2s; /* Animation */
+
+}
+
+.projectImage:hover {
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
