--- a/src/App.css
+++ b/src/App.css
@@ -139,7 +139,7 @@
   width: 80vw;
   height: 80vh;
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-auto-rows: 18vw;
   gap: 2vw;
 
@@ -164,6 +164,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
+  position: relative;
 
   margin: 1vw;
 
@@ -175,6 +176,14 @@
 
   cursor: pointer;
   overflow: hidden;
+}
+
+.projectClicked {
+  position: absolute;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background-color: #eaeaeac9;
 }
 
 .projectImage {
