--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,6 @@
   background-size: 70% .05em;
 }
 
-/* About page */
-
 .page-container {
   width: 100%;
   height: 100%;
@@ -65,6 +63,7 @@
   justify-content: center;
 }
 
+/* About page */
 .about-header {
   text-align: center;
   position: relative;
@@ -172,10 +171,10 @@
 
   border-radius: 0.5vw;
 
-  border: 1px solid #333;
-
-  cursor: pointer;
+  /* cursor: pointer; */
   overflow: hidden;
+  transition: background-color .2s; /* Animation */
+  
 }
 
 .projectClicked {
@@ -183,7 +182,7 @@
   z-index: 1;
   height: 100%;
   width: 100%;
-  background-color: #eaeaeac9;
+  background-color: #eaeaeada;
 }
 
 .projectImage {
@@ -197,5 +196,51 @@
 }
 
 .projectImage:hover {
-  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform: scale(1.1); 
+}
+
+.projectName {
+  font-size: 2vw;
+}
+
+/* contact me page */
+
+.contact {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: left;
+  justify-content: space-evenly;
+
+  height: 100%;
+  width: 100%;
+}
+
+.title {
+  width: 30%;
+}
+
+.mail-icon {
+  text-align: center;
+}
+
+.contactInfo {
+  width: 30%;
+  border: 1px solid #b9b9b9;
+  border-radius: 10px;
+  padding-left: 2.5%;
+}
+
+input, textarea {
+  width: 90%;
+  height: 20px;
+  margin: 1.5%;
+}
+
+textarea {
+  height: 100px;
+}
+
+.input:required {
+  content:" *";
 }
