--- a/src/App.css
+++ b/src/App.css
@@ -188,6 +188,22 @@
   height: 100%;
   width: 100%;
   background-color: #eaeaeada;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+
+  animation: fade-in 0.7s;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 100;
+  }
 }
 
 .projectImage {
@@ -206,6 +222,11 @@
 
 .projectName {
   font-size: 2vw;
+}
+
+.projectDescription {
+  width: 90%;
+  text-align: center;
 }
 
 /* contact me page */
