--- a/src/App.css
+++ b/src/App.css
@@ -251,7 +251,18 @@
 }
 
 .mail-icon {
-  text-align: center;
+  text-align: left;
+  margin-bottom: 2%;
+  border: 0ch;
+  background-color: transparent;
+  cursor: pointer;
+  padding: 0%;
+  font-size: xx-large;
+  color: #333;
+}
+
+.mail-icon:hover {
+  color: black;
 }
 
 .contactInfo {
@@ -265,12 +276,9 @@ input, textarea {
   width: 90%;
   height: 20px;
   margin: 1.5%;
+  margin-left: 0;
 }
 
 textarea {
   height: 100px;
-}
-
-.input:required {
-  content:" *";
 }
