--- a/src/App.css
+++ b/src/App.css
@@ -61,14 +61,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  overflow-y: auto;
 }
 
 /* About page */
 .about-header {
   text-align: center;
   position: relative;
-  display: flex;
-  flex-direction: row;
   width: 100%;
   font-size: 4em;
   color: #333;
@@ -81,6 +81,8 @@
   align-items: center;
   justify-content: center;
   text-align: left;
+
+  font-size: 1.5vw;
 }
 
 .about-image {
@@ -113,10 +115,14 @@
 
 .about-content p {
   line-height: 1.6;
-  font-size: 1.3vw;
+  font-size: 0.9em;
 }
 
 .social-links {
+  display: flex;
+  flex-direction: row;
+  align-items: right;
+  justify-content: right;
   width: 100%;
   text-align: right;
 }
@@ -281,4 +287,50 @@ input, textarea {
 
 textarea {
   height: 100px;
+}
+
+
+@media screen and (max-width: 768px) {
+  .about-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    font-size: 3vw;
+    margin-top: 10vh;
+  }
+
+  .about-text {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .about-text p {
+    width: 90%;
+    font-size: 1em;
+  }
+
+  .about-image-and-icons {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+    justify-content: center;
+    margin-right: 0vw;
+    width: 40%;
+  }
+
+  .social-links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  
 }
