--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -53,6 +53,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+
+    font-size: 3vh;
   
     animation: fade-in 0.7s;
   }
@@ -80,7 +82,7 @@
   }
   
   .projectName {
-    font-size: 2vw;
+    font-size: 2em;
   }
   
   .projectDescription {
@@ -91,6 +93,19 @@
   .technologies {
     position: absolute;
     bottom: 0;
-    font-size: small;
+    font-size: 0.7em;
   }
+
+@media screen and (max-width: 768px){
+  .grid {
+    grid-template-columns: 1fr;
+    grid-auto-rows: 60vw;
+    gap: 4vw;
+    padding:2vw;
+    padding-right: 4vw;
+    padding-bottom: 4vw;
+    
+  }
+  
+}
   
