adjusting contact page to mobile

--- a/src/pages/contactMe.css
+++ b/src/pages/contactMe.css
@@ -47,3 +47,18 @@
   textarea {
     height: 100px;
   }
+
+  @media screen and (max-width: 768px){
+    .contact {
+      flex-direction: column;
+    }
+  
+    .title {
+      width: 90%;
+    }
+  
+    .contactInfo {
+      width: 90%;
+    }
+    
+  }
